SimpleMP -> jpb Music

--- a/app/src/main/res/layout-v31/simple_m_p_disabled_widget.xml
+++ b/app/src/main/res/layout-v31/simple_m_p_disabled_widget.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Widget.ComposeSimpleMP.AppWidget.Container"
+    style="@style/Widget.ComposeMusic.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:theme="@style/Widget.ComposeSimpleMP.AppWidget.Container">
+    android:theme="@style/Widget.ComposeMusic.AppWidget.Container">
 
     <TextView
         android:id="@+id/noMusicPlaying_Widget"
