--- a/app/src/main/res/layout-v31/simple_m_p_widget.xml
+++ b/app/src/main/res/layout-v31/simple_m_p_widget.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:background="@drawable/app_widget_background"
-    android:theme="@style/Widget.ComposeSimpleMP.AppWidget.Container"
+    android:theme="@style/Widget.ComposeMusic.AppWidget.Container"
     android:padding="10dp">
 
     <ImageView
