--- a/app/src/main/res/layout/simple_m_p_widget.xml
+++ b/app/src/main/res/layout/simple_m_p_widget.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="90dp"
     android:background="@drawable/app_widget_background"
-    android:theme="@style/Theme.ComposeSimpleMP"
+    android:theme="@style/Theme.ComposeMusic"
     android:padding="10dp">
 
     <ImageView
